--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#BB2C08",
     "navigationBarTitleText": "发现音乐",
-    "navigationBarTextStyle":"black"
+    "navigationBarTextStyle":"white"
   },
   "tabBar": {
     "backgroundColor": "#212121",
